Included react, parcel

--- a/package.json
+++ b/package.json
@@ -30,18 +30,24 @@
     "start": "npm run start:firefox",
     "start:firefox": "npm run copy-static-files && concurrently --kill-others \"npm run parcel:watch\" \"npm run web-ext:firefox\"",
     "copy-static-files": "cpx \"src/**/*.{json,png,svg}\" dist && cpx manifest.json dist",
-    "parcel:watch": "parcel watch --no-hmr src/**/*.html",
+    "parcel:watch": "parcel watch --no-hmr src/devtools.html",
+    "parcel:build": "parcel build src/devtools.html",
     "web-ext:firefox": "web-ext run --source-dir dist",
     "prettify": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\""
   },
   "devDependencies": {
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "concurrently": "^5.0.2",
     "cpx": "^1.5.0",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
     "typescript": "^3.7.5",
     "web-ext": "^4.0.0"
   },
   "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "webextension-polyfill": "^0.6.0"
   }
 }
