--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "webextension-polyfill": "^0.6.0"
+    "webextension-polyfill": "^0.6.0",
+    "zustand": "^2.2.2"
   }
 }
