--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,6 +13,7 @@
     "96": "./assets/logo_96.png",
     "128": "./assets/logo_128.png"
   },
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "content_scripts": [
     {
       "matches": ["*://localhost/*"],
