--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "parcel-plugin-json-url-loader": "^0.1.2",
     "prettier": "^1.19.1",
     "typescript": "^3.8.3",
+    "wait-on": "^4.0.1",
     "web-ext": "^4.1.0"
   },
   "dependencies": {
