--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,15 +8,15 @@
   },
   "name": "Piral Inspector",
   "short_name": "pi-inspect",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "The official Piral developer tools browser extension.",
   "author": "smapiot",
   "homepage_url": "https://piral.io",
   "icons": {
-    "48": "./assets/logo_48.png",
-    "64": "./assets/logo_64.png",
-    "96": "./assets/logo_96.png",
-    "128": "./assets/logo_128.png"
+    "48": "assets/logo_48.png",
+    "64": "assets/logo_64.png",
+    "96": "assets/logo_96.png",
+    "128": "assets/logo_128.png"
   },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "content_scripts": [
