--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,7 +8,8 @@
   },
   "name": "Piral Inspector",
   "short_name": "pi-inspect",
-  "version": "0.8.1",
+  "default_locale": "en",
+  "version": "0.9.0",
   "description": "The official Piral developer tools browser extension.",
   "author": "smapiot",
   "homepage_url": "https://piral.io",
