--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "piral-inspector",
-  "version": "0.9.1",
+  "version": "0.10.0",
   "description": "A DevTools extension for Piral instances and their pilets.",
   "keywords": [
     "piral",
@@ -28,20 +28,16 @@
   "scripts": {
     "start": "npm run watch:firefox",
     "build:all": "npm run build:firefox && npm run build:opera && npm run build:chrome && npm run build:edge",
-    "watch:firefox": "concurrently --kill-others \"npm run watch:parcel -- --out-dir dist/firefox\" \"npm run watch:web-ext -- -s dist/firefox -t firefox-desktop\"",
-    "build:firefox": "npm run build:parcel -- --out-dir dist/firefox && npm run build:web-ext -- -s dist/firefox -a web-ext-artifacts/firefox",
-    "deploy:firefox": "rm -rf dist/firefox && npm run build:firefox && shipit firefox dist/firefox",
-    "watch:chrome": "concurrently --kill-others \"npm run watch:parcel -- --out-dir dist/chrome\" \"npm run watch:web-ext -- -s dist/chrome -t chromium\"",
-    "build:chrome": "npm run build:parcel -- --out-dir dist/chrome && npm run build:web-ext -- -s dist/chrome -a web-ext-artifacts/chrome",
-    "deploy:chrome": "rm -rf dist/chrome && npm run build:chrome && shipit chrome dist/chrome",
-    "watch:opera": "concurrently --kill-others \"npm run watch:parcel -- --out-dir dist/opera\" \"npm run watch:web-ext -- -s dist/opera -t chromium\"",
-    "build:opera": "npm run build:parcel -- --out-dir dist/opera && npm run build:web-ext -- -s dist/opera -a web-ext-artifacts/opera",
-    "deploy:opera": "rm -rf dist/opera && npm run build:opera && shipit opera dist/opera",
-    "watch:edge": "concurrently --kill-others \"npm run watch:parcel -- --out-dir dist/edge\" \"npm run watch:web-ext -- -s dist/edge -t chromium\"",
-    "build:edge": "npm run build:parcel -- --out-dir dist/edge && npm run build:web-ext -- -s dist/edge -a web-ext-artifacts/edge",
-    "deploy:edge": "rm -rf dist/edge && npm run build:edge && shipit edge dist/edge",
-    "watch:parcel": "parcel watch --no-hmr src/devtools.html",
-    "build:parcel": "parcel build src/devtools.html --no-source-maps",
+    "watch:firefox": "concurrently --kill-others \"npm run watch:parcel firefox\" \"npm run watch:web-ext -- -s dist/firefox -t firefox-desktop\"",
+    "build:firefox": "npm run build:parcel firefox && npm run build:web-ext -- -s dist/firefox -a web-ext-artifacts/firefox",
+    "watch:chrome": "concurrently --kill-others \"npm run watch:parcel chrome\" \"npm run watch:web-ext -- -s dist/chrome -t chromium\"",
+    "build:chrome": "npm run build:parcel chrome && npm run build:web-ext -- -s dist/chrome -a web-ext-artifacts/chrome",
+    "watch:opera": "concurrently --kill-others \"npm run watch:parcel opera\" \"npm run watch:web-ext -- -s dist/opera -t chromium\"",
+    "build:opera": "npm run build:parcel opera && npm run build:web-ext -- -s dist/opera -a web-ext-artifacts/opera",
+    "watch:edge": "concurrently --kill-others \"npm run watch:parcel edge\" \"npm run watch:web-ext -- -s dist/edge -t chromium\"",
+    "build:edge": "npm run build:parcel edge && npm run build:web-ext -- -s dist/edge -a web-ext-artifacts/edge",
+    "watch:parcel": "node tools/serve.js",
+    "build:parcel": "node tools/build.js",
     "watch:web-ext": "wait-on -d 6000 package.json && web-ext run",
     "build:web-ext": "web-ext build",
     "prettify": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\""
@@ -51,10 +47,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/reactstrap": "^8.7.2",
-    "@wext/shipit": "^0.2.1",
     "concurrently": "^5.3.0",
-    "parcel-bundler": "^1.12.5",
-    "parcel-plugin-json-url-loader": "^0.1.2",
+    "esbuild": "^0.15.7",
+    "esbuild-copy-static-files": "^0.1.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4",
     "wait-on": "^4.0.2",
