--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -8,7 +8,7 @@
   },
   "name": "Piral Inspector",
   "short_name": "pi-inspect",
-  "version": "0.9.1",
+  "version": "0.10.0",
   "description": "The official Piral developer tools browser extension.",
   "author": "smapiot",
   "homepage_url": "https://piral.io",
@@ -39,11 +39,11 @@
   "content_scripts": [
     {
       "matches": ["*://localhost/*"],
-      "js": ["./scripts/contentScript.js"]
+      "js": ["./contentScript.js"]
     }
   ],
   "background": {
-    "scripts": ["./scripts/background.js"]
+    "scripts": ["./background.js"]
   },
   "devtools_page": "./devtools.html"
 }
