Improved view by resetting upload bar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,15 @@
     "declaration": true,
     "noImplicitAny": false,
     "removeComments": false,
-    "jsx": "react",
     "noLib": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "skipLibCheck": true,
-    "target": "es5",
+    "resolveJsonModule": true,
+    "target": "es6",
     "sourceMap": true,
+    "jsx": "react",
     "jsxFactory": "jsx",
     "lib": ["es6", "dom", "esnext"]
   },
