--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/reactstrap": "^8.7.2",
+    "@types/webextension-polyfill": "^0.10.7",
     "concurrently": "^5.3.0",
     "esbuild": "^0.15.7",
     "esbuild-copy-static-files": "^0.1.0",
@@ -65,7 +66,7 @@
     "react-flow-renderer": "^9.7.4",
     "reactstrap": "^8.10.0",
     "uuidv4": "^6.2.12",
-    "webextension-polyfill-ts": "0.26.0",
+    "webextension-polyfill": "^0.10.0",
     "zustand": "^3.0.0"
   }
 }
