--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -31,6 +31,9 @@
     },
     "default_popup": "popups/disabled.html"
   },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'  'wasm-unsafe-eval'; object-src 'self';"
+  },
   "externally_connectable": {
     "ids": ["*"],
     "matches": ["*://localhost/*"]
@@ -38,8 +41,7 @@
   "content_scripts": [
     {
       "matches": ["*://localhost/*"],
-      "js": ["./contentScript.js"],
-      "run_at": "document_start"
+      "js": ["./contentScript.js"]
     }
   ],
   "host_permissions": ["*://localhost/*"],
