--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -52,7 +52,8 @@
   "permissions": [
     "offscreen",
     "storage",
-    "scripting"
+    "scripting",
+    "devtools_page"
   ],
   "devtools_page": "./devtools.html"
 }
