--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -20,7 +20,7 @@
     "96": "assets/logo_96.png",
     "128": "assets/logo_128.png"
   },
-  "browser_action": {
+  "action": {
     "default_icon": {
       "16": "assets/disabled_16.png",
       "32": "assets/disabled_32.png",
