--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "git+https://github.com/smapiot/piral-inspector.git"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "bugs": {
     "url": "https://github.com/smapiot/piral-inspector/issues"
@@ -39,37 +39,36 @@
     "build:opera": "npm run build:parcel opera && npm run build:web-ext -- -s dist/opera -a web-ext-artifacts/opera",
     "watch:edge": "concurrently --kill-others \"npm run watch:parcel edge\" \"npm run watch:web-ext -- -s dist/edge -t chromium\"",
     "build:edge": "npm run build:parcel edge && npm run build:web-ext -- -s dist/edge -a web-ext-artifacts/edge",
-    "watch:parcel": "node tools/serve.js",
-    "build:parcel": "node tools/build.js",
+    "watch:parcel": "node tools/serve.mjs",
+    "build:parcel": "node tools/build.mjs",
     "watch:web-ext": "wait-on -d 6000 package.json && web-ext run",
     "build:web-ext": "web-ext build",
     "prettify": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\""
   },
   "devDependencies": {
     "@types/dagre": "^0.7.47",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/reactstrap": "^8.7.2",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/webextension-polyfill": "^0.10.7",
-    "concurrently": "^5.3.0",
-    "esbuild": "^0.15.7",
+    "concurrently": "^8",
+    "esbuild": "^0.20.0",
     "esbuild-copy-static-files": "^0.1.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4",
-    "wait-on": "^4.0.2",
-    "web-ext": "^7.1.0"
+    "prettier": "^3",
+    "typescript": "^5",
+    "wait-on": "^7",
+    "web-ext": "^7"
   },
   "dependencies": {
     "@emotion/core": "^10.1.1",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5",
     "dagre": "^0.8.5",
-    "react": "^17.0.2",
+    "react": "^18",
     "react-d3-tree": "^3.2.1",
-    "react-dom": "^17.0.2",
-    "react-flow-renderer": "^9.7.4",
-    "reactstrap": "^8.10.0",
+    "react-dom": "^18",
+    "react-flow-renderer": "^10",
+    "reactstrap": "^9",
     "uuidv4": "^6.2.12",
     "webextension-polyfill": "^0.10.0",
-    "zustand": "^3.0.0"
+    "zustand": "^4"
   }
 }
