--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -8,7 +8,7 @@
   },
   "name": "Piral Inspector",
   "short_name": "pi-inspect",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "The official Piral developer tools browser extension.",
   "author": "smapiot",
   "homepage_url": "https://piral.io",
@@ -41,7 +41,7 @@
   "content_scripts": [
     {
       "matches": ["*://localhost/*"],
-      "js": ["./contentScript.js", "./scripts/helpers.js", "./scripts/legacy-worker.js"]
+      "js": ["./contentScript.js"]
     }
   ],
   "host_permissions": ["*://localhost/*"],
