Improved manifest compatibility

--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "start": "npm run watch:firefox",
     "build:all": "npm run build:firefox && npm run build:opera && npm run build:chrome && npm run build:edge",
     "watch:firefox": "concurrently --kill-others \"npm run watch:parcel firefox\" \"npm run watch:web-ext -- -s dist/firefox -t firefox-desktop\"",
-    "build:firefox": "npm run build:parcel firefox && npm run build:web-ext -- -s dist/firefox -a web-ext-artifacts/firefox",
+    "build:firefox": "npm run build:parcel firefox && npm run build:web-ext -- -s dist/firefox -a web-ext-artifacts/firefox --overwrite-dest",
     "watch:chrome": "concurrently --kill-others \"npm run watch:parcel chrome\" \"npm run watch:web-ext -- -s dist/chrome -t chromium\"",
-    "build:chrome": "npm run build:parcel chrome && npm run build:web-ext -- -s dist/chrome -a web-ext-artifacts/chrome",
+    "build:chrome": "npm run build:parcel chrome && npm run build:web-ext -- -s dist/chrome -a web-ext-artifacts/chrome --overwrite-dest",
     "watch:opera": "concurrently --kill-others \"npm run watch:parcel opera\" \"npm run watch:web-ext -- -s dist/opera -t chromium\"",
-    "build:opera": "npm run build:parcel opera && npm run build:web-ext -- -s dist/opera -a web-ext-artifacts/opera",
+    "build:opera": "npm run build:parcel opera && npm run build:web-ext -- -s dist/opera -a web-ext-artifacts/opera --overwrite-dest",
     "watch:edge": "concurrently --kill-others \"npm run watch:parcel edge\" \"npm run watch:web-ext -- -s dist/edge -t chromium\"",
-    "build:edge": "npm run build:parcel edge && npm run build:web-ext -- -s dist/edge -a web-ext-artifacts/edge",
+    "build:edge": "npm run build:parcel edge && npm run build:web-ext -- -s dist/edge -a web-ext-artifacts/edge --overwrite-dest",
     "watch:parcel": "node tools/serve.mjs",
     "build:parcel": "node tools/build.mjs",
     "watch:web-ext": "wait-on -d 6000 package.json && web-ext run",
